parse-display-tests/tests/compile_fail/from_str_enum_default.rs
use parse_display::FromStr;

#[derive(FromStr)]
#[from_str(default)]
enum TestEnum {}

fn main() {}
